--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiosqlite==0.17.0
 aniso8601==7.0.0
 annotated-types==0.6.0
 anyio==4.2.0
+async-timeout==4.0.3
 asyncpg==0.29.0
 atlastk==0.13.3
 bcrypt==4.1.2
@@ -11,7 +12,6 @@ fastapi==0.109.0
 graphene
 graphene-sqlalchemy
 graphql-core
-graphql-relay
 greenlet==3.0.3
 h11==0.14.0
 idna==3.6
@@ -22,8 +22,8 @@ mdurl==0.1.2
 mypy-extensions==1.0.0
 passlib==1.7.4
 promise==2.3
-psycopg2
-psycopg2-binary
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic_core==2.14.6
 Pygments==2.17.2
@@ -34,12 +34,12 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 rich==13.7.0
 Rx==1.6.3
-setuptools==69.0.3
 singledispatch==3.7.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.51
 starlette==0.35.1
+strawberry-graphql==0.217.1
 typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.9.0
